--- a/htdocs/wordpress/wp-content/themes/starter/style.css
+++ b/htdocs/wordpress/wp-content/themes/starter/style.css
@@ -53,6 +53,7 @@ html {
 	-ms-text-size-adjust:     100%;
 }
 
+
 body {
 	margin: 0;
 }
@@ -179,6 +180,20 @@ textarea {
 	color: inherit;
 	font: inherit;
 	margin: 0;
+}
+/*--------------------------------------------------------------
+# Save Oswego Button
+--------------------------------------------------------------*/
+#save_oswego{
+color: #edeceb;
+    width: 320px;
+    height: 96px;
+    font-family: 'truenolight';
+    background-color: #08747f;
+    font-size:24px;
+    text-decoration: none;
+    border-radius:10px;
+    box-shadow: none;
 }
 
 button {
@@ -348,6 +363,8 @@ h1{
     font-size: 64pt;
     font-color: DarkGrey;
 }
+
+h2
 
 p {
 	font-family: 'TruenoLight';
@@ -941,6 +958,17 @@ a:active {
 	float: right;
 	text-align: right;
 	width: 50%;
+}
+
+/*--------------------------------------------------------------
+About Page
+--------------------------------------------------------------*/
+.content #site-content{
+background-color: #ffffff;
+}
+
+#charity-list {
+background-color: #ecedeb;
 }
 
 /*--------------------------------------------------------------
